completed refresh token function
